# RadiantCpp

./: .clang-format  CMakeLists.txt
src/: ast_printer.cpp  lexer.cpp  main.cpp  parser.cpp  scanner.cpp  token.cpp
src/generator/: generate.py
src/include/: ast_printer.h  expressions.h  lexer.h  parser.h  scanner.h  statements.h  token.h
src/tests/: test_lexer.cpp  test_parser.cpp  test_scanner.cpp
